--- a/impressum.html
+++ b/impressum.html
@@ -32,14 +32,11 @@ layout: page
   <span lang="DE">
     Nach geltendem Recht sind wir verpflichtet, Verbraucher auf die Existenz der Europäischen
     Online-Streitbeilegungs-Plattform hinzuweisen, die für die Beilegung von Streitigkeiten genutzt werden kann, ohne
-    dass
-    ein Gericht eingeschaltet werden muss. Für die Einrichtung der Plattform ist die Europäische Kommission zuständig.
-    Die
-    Europäische Online-Streitbeilegungs-Plattform ist hier zu finden: http://ec.europa.eu/odr. Unsere E-Mail lautet:
-    info@wirkaufendeinethg.de.
+    dass ein Gericht eingeschaltet werden muss. Für die Einrichtung der Plattform ist die Europäische Kommission
+    zuständig.
+    Die Europäische Online-Streitbeilegungs-Plattform ist hier zu finden: http://ec.europa.eu/odr.
     Wir weisen aber darauf hin, dass wir nicht bereit sind, uns am Streitbeilegungsverfahren im Rahmen der Europäischen
-    Online-Streitbeilegungs-Plattform zu beteiligen. Nutzen Sie zur Kontaktaufnahme bitte unsere obige E-Mail und
-    Telefonnummer.</span>
+    Online-Streitbeilegungs-Plattform zu beteiligen. </span>
 </p>
 
 <p class="MsoNormal">
