--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
 <div id="copyright" class="container">
 	<ul class="links">
 					<li>&copy; Münsterland Smarites. </li>
+					<li><a href="/impressum.html">Impressum</a></li>
 					</ul>
 					</div>
 					</section>
