--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li><a class="icon solid fa-home" href="index.html"><span>Startseite</span></a></li>
+						<li><a class="icon solid fa-home" href="index.html"><span>MLS-start</span></a></li
 						<li><a class="icon solid fa-sitemap" href="no-sidebar.html"><span>Neuigkeiten</span></a></li>
+						<li><a class="icon solid fa-sitemap" href="no-sidebar.html"><span>Unser Stammtisch</span></a></li>
+						<li><a class="icon solid fa-sitemap" href="no-sidebar.html"><span>Foto-Galerie</span></a></li>
+						<li><a class="icon solid fa-sitemap" href="no-sidebar.html"><span>Die Smarties</span></a></li>
 						</ul>
 						</nav>
 
