--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 						<!-- Feature -->
 						<section>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/midsize-mls_logo.jpg" alt="" /></a>
 							<header>
 								<h3>Okay, so what is this?</h3>
 							</header>
