--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 							<header>
 								<h3>Hier treffen sich Smart-Freunde, 
 							</header>
-							<p>This is <strong>Strongly Typed</strong>, die sich der "kleinen Marke" verschrieben haben und Erfahrungen rund um den Betrieb, 
-								die Pflege und die Reparatur ihrer Fahrzeuge austauschen möchten.
-                                                                Die Stammtisch-Besucher besitzen verschiedene Smart Modelle. 
-								Dies ist kein Hindernis, 
-								denn uns vereint das gemeinsame Interesse an unserem schönen Hobby. 
-								Gegenseitige Hilfe wird bei uns groß geschrieben und frohe Geselligkeit auch.
-                                                                Gäste mit Interesse an der Sache sind bei uns selbstverständlich jederzeit gern gesehen, 
-								können nähere Informationen über unsere Veranstaltungen erhalten und uns auch ganz unverbindlich an einem der Stammtischtermine besuchen kommen.
+							<p>die sich der "kleinen Marke" verschrieben haben und Erfahrungen rund um den Betrieb, 
+							   die Pflege und die Reparatur ihrer Fahrzeuge austauschen möchten.
+                                                           Die Stammtisch-Besucher besitzen verschiedene Smart Modelle. 
+						           Dies ist kein Hindernis, 
+							   denn uns vereint das gemeinsame Interesse an unserem schönen Hobby. 
+							   Gegenseitige Hilfe wird bei uns groß geschrieben und frohe Geselligkeit auch.
+                                                           Gäste mit Interesse an der Sache sind bei uns selbstverständlich jederzeit gern gesehen, 
+							   können nähere Informationen über unsere Veranstaltungen erhalten und uns auch ganz unverbindlich an einem der Stammtischtermine besuchen kommen.
 								</h3>
 							
 								</p>
