--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						           Dies ist kein Hindernis, 
 							   denn uns vereint das gemeinsame Interesse an unserem schönen Hobby. 
 							   Gegenseitige Hilfe wird bei uns groß geschrieben und frohe Geselligkeit auch.
-                                                           Gäste mit Interesse an der Sache sind bei uns selbstverständlich jederzeit gern gesehen, 
+                                                       </p>Gäste mit Interesse an der Sache sind bei uns selbstverständlich jederzeit gern gesehen, 
 							   können nähere Informationen über unsere Veranstaltungen erhalten und uns auch ganz unverbindlich an einem der Stammtischtermine besuchen kommen.
 								</h3>
 							
