--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 						<!-- Feature -->
 						<section>
-							<a href="#" class="image featured"><img src="images/midsize-mls_logo.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/favicon.ico" alt="" /></a>
 							<header>
 								<h3>Hier treffen sich Smart-Freunde, 
 							</header>
