--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 						<!-- Feature -->
 						<section>
-							<a href="#" class="image featured"><img src="images/BBrechts.png" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/BBrechts.jpg" alt="" /></a>
 							<header>
 								<h3>Hier treffen sich Smart-Freunde, 
 							</header>
@@ -84,7 +84,7 @@
 
 						<!-- Feature -->
 						<section>
-							<a href="#" class="image featured"><img src="images/BBlinks.png" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/BBlinks.jpg" alt="" /></a>
 							<header>
 								<h3>What's this built with?</h3>
 							</header>
