--- a/index.html
+++ b/index.html
@@ -70,13 +70,25 @@
 
 						<!-- Feature -->
 						<section>
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/banner.jpg" alt="" /></a>
 							<header>
-								<h3>Nice! What is HTML5 UP?</h3>
+								<h3>Unser Stammtisch</h3>
 							</header>
-							<p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://twitter.com/ajlkn">AJ’s</a> (= me).
-								I started it as a way to both test my responsive tools and sharpen up my coding
-								and design skills a bit.</p>
+							<p><a </a> Wann und wo treffen wir uns? 
+								Der Stammtisch Münsterland trifft sich jeden 3. Sonntag im Monat um 15.00 Uhr am
+								http://www.cafe-jedermann.de
+								Wettringer Str. 60
+								48485 Neuenkirchen
+
+								Alternativ am Offlumer See /48485 Neuenkirchen
+
+								Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.de finden.
+
+								Für weitere Informationen und Terminabsprachen kannst Du uns im Smart-Forum.de finden.
+								Dort gehst Du einfach auf SMARTies Regional und wählst dann unseren Forumsbeitrag
+								Smarties im westlichen Münsterland "....oder klicke einfach auf:
+								http://www.smart-forum.de
+								.</p>
 							</section>
 
 					</div>
@@ -86,11 +98,12 @@
 						<section>
 							<a href="#" class="image featured"><img src="images/BBlinks.jpg" alt="" /></a>
 							<header>
-								<h3>What's this built with?</h3>
+								<h3>Neuigkeiten</h3>
 							</header>
-							<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
-								sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these
-								tools.</p>
+							<p><strong>Responsive Tools</strong> Herzlich Willkommen bei den Münsterland-Smarties – Neuigkeiten
+								Auf diesem Teil der Homepage möchten wir Euch einen kleinen Einblick in unsere Aktivitäten gewähren. 
+								Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch dann mal auf einem Stammtisch begrüßen.
+</p>
 								</section>
 
 					</div>
