--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								Wettringer Str. 60
 								48485 Neuenkirchen
 
-								Alternativ am Offlumer See /48485 Neuenkirchen
+								Alternativ am Offlumer See /48485 Neuenkirchen oder siehe unter "Neuigkeiten"
 
 								Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.de finden.
 
