--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 							<header>
 								<h3>Neuigkeiten</h3>
 							</header>
-							<p><strong>Responsive Tools</strong> Herzlich Willkommen bei den Münsterland-Smarties – Neuigkeiten
-								Auf diesem Teil der Homepage möchten wir Euch einen kleinen Einblick in unsere Aktivitäten gewähren. 
-								Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch dann mal auf einem Stammtisch begrüßen.
+							<p>Herzlich Willkommen bei den Münsterland-Smarties – Neuigkeiten
+							   Auf diesem Teil der Homepage möchten wir Euch einen kleinen Einblick in unsere Aktivitäten gewähren. 
+							   Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch dann mal auf einem Stammtisch begrüßen.
 </p>
 								</section>
 
