--- a/index.html
+++ b/index.html
@@ -138,17 +138,15 @@
 								<h2><a href="#">I don’t want to say <strong>it’s the aliens</strong> ...<br />
 										but it’s the aliens.</a></h2>
 							</header>
-							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-							<h3>I mean isn't it possible?</h3>
-							<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-								ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-								sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-								in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-								magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-								consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-								justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-								mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-								Curabitur leo nibh, rutrum eu malesuada in tristique.</p>
+							<a href="#" class="image featured"><img src="images/midsize-mls_logo.jpg" alt="" /></a>
+							<h3>Die Smarties</h3>
+							<p>Unsere Smarties: (link auf Fotos)
+
+							<a2022-02-28a>
+							<aZur Erinnerung an Kai, Gründer und die Seele der Smarties.
+							Du wirst uns immer im Gedächnis bleiben!a>
+
+							</p>
 							<ul class="actions">
 								<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
 							</ul>
