--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 							<h3>Die Smarties</h3>
 							<p>Unsere Smarties: (link auf Fotos)
 
-							<a2022-02-28a>
-							<aZur Erinnerung an Kai, Gründer und die Seele der Smarties.
-							Du wirst uns immer im Gedächnis bleiben!a>
+							2022-02-28
+							Zur Erinnerung an Kai, Gründer und die Seele der Smarties.
+							Du wirst uns immer im Gedächnis bleiben!
 
 							</p>
 							<ul class="actions">
