--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
 							<h3>Die Smarties</h3>
 							<p>Unsere Smarties: (link auf Fotos)
 
-							2022-02-28
-							Zur Erinnerung an Kai, Gründer und die Seele der Smarties.
-							Du wirst uns immer im Gedächnis bleiben!
-
+							<p>2022-02-28
+							<p>Zur Erinnerung an Kai, 
+							<p>Gründer und die Seele der Smarties.
+							<p>Du wirst uns immer im Gedächnis bleiben!
 							</p>
 							<ul class="actions">
 								<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
