--- a/index.html
+++ b/index.html
@@ -135,17 +135,16 @@
 						<!-- Post -->
 						<article class="box post">
 							<header>
-								<h2><a href="#">I don’t want to say <strong>it’s the aliens</strong> ...<br />
-										but it’s the aliens.</a></h2>
+								<h2><a *** </a></h2>
 							</header>
 							<a href="#" class="image featured"><img src="images/midsize-mls_logo.jpg" alt="" /></a>
 							<h3>Die Smarties</h3>
 							<p>Unsere Smarties: (link auf Fotos)
 
-							<p>2022-02-28
-							<p>Zur Erinnerung an Kai, 
-							<p>Gründer und die Seele der Smarties.
-							<p>Du wirst uns immer im Gedächnis bleiben!
+							<p>2022-02-28<p>
+							<p>Zur Erinnerung an Kai,<p>
+							<p>Gründer und die Seele der Smarties.<p>
+							<p>Du wirst uns immer im Gedächnis bleiben!<p>
 							</p>
 							<ul class="actions">
 								<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
