--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					</div>
 					<div class="col-12">
 						<ul class="actions">
-							<li><a href="#" class="button icon solid fa-file">Tell Me More</a></li>
+							<li><a href="#" class="button icon solid fa-file">Schreib uns deine Neuigkeiten</a></li>
 						</ul>
 					</div>
 					</div>
@@ -119,8 +119,8 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="container">
-				<p>Use this space for <strong>profound thoughts</strong>.<br />
-					Or an enormous ad. Whatever.</p>
+				<p>Die <strong>Münsterland</strong>.<br />
+					Smarties</p>
 			</div>
 		</section>
 
