--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 							<p>Du wirst uns immer im Gedächnis bleiben!<p>
 							</p>
 							<ul class="actions">
-								<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
+								<li><a href="#" class="button icon solid fa-file">nach oben</a></li>
 							</ul>
 						</article>
 
