--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="container">
-				<p>Die <strong>Münsterland</strong>.<br />
+				<p>Die <strong>Münsterland</strong>-<br />
 					Smarties</p>
 			</div>
 		</section>
@@ -179,7 +179,7 @@
 								tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros consequat
 								magna tempus.</p>
 							<ul class="actions">
-								<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
+								<li><a href="#" class="button icon solid fa-file">nach oben</a></li>
 							</ul>
 						</article>
 
