--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="container">
-				<p>Die <strong>Münsterland</strong>-<br />
-					Smarties</p>
+				<p>Die<strong>Münsterland</strong>-<br />Smarties</p>
 			</div>
 		</section>
 
@@ -139,8 +138,7 @@
 							</header>
 							<a href="#" class="image featured"><img src="images/midsize-mls_logo.jpg" alt="" /></a>
 							<h3>Die Smarties</h3>
-							<p>Unsere Smarties: (link auf Fotos)
-
+							<p>Unsere Smarties: (link auf Fotos)<p>
 							<p>2022-02-28<p>
 							<p>Zur Erinnerung an Kai,<p>
 							<p>Gründer und die Seele der Smarties.<p>
@@ -154,7 +152,7 @@
 				<section id="footer">
 					<div class="container">
 						<header>
-							<h2>Fragen.. Kontakt? <strong>Get in touch:</strong></h2>
+							<h2>Fragen.. Neuigkeiten..? <strong>schreibe uns:</strong></h2>
 						</header>
 						<div class="row">
 							<div class="col-6 col-12-medium">
@@ -179,19 +177,17 @@
 							</div>
 							<div class="col-6 col-12-medium">
 								<section>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-									leo nibh, rutrum eu malesuada.</p>
+									<p>nehme Kontakt mit uns auf: mit deinen Fragen, Anregungen oder due möchtest von dem letzten Event Fotos haben oder uns zusenden. </p>
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon solid fa-home">
-													1234 Somewhere Road<br />
-													Nashville, TN 00000<br />
-													USA
+													49124 Georgsmarienhütte<br />
+													Niedersachsen<br />
+													D
 												</li>
 												<li class="icon solid fa-phone">
-													(000) 000-0000
+													+49 - 170 - 310 - 4221
 												</li>
 												<li class="icon solid fa-envelope">
 													<a href="#">info@münsterland-smarties.de</a>
@@ -216,7 +212,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://Münsterland-Smarties/Impressum"</a></li>
 						</ul>
 					</div>
 				</section>
