--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
 							<header>
 								<h3>Unser Stammtisch</h3>
 							</header>
-							<p><a </a> <a Wann und wo treffen wir uns? a>
-								<a Der Stammtisch Münsterland trifft sich jeden 3. Sonntag im Monat um 15.00 Uhr am a>
-								<a http://www.cafe-jedermann.de a>
-								<a Wettringer Str. 60 a>
-								<a 48485 Neuenkirchen a>
+							<p><a </a>  Wann und wo treffen wir uns?
+								Der Stammtisch Münsterland trifft sich jeden 3. Sonntag im Monat um 15.00 Uhr am,
+								http://www.cafe-jedermann.de
+								Wettringer Str. 60
+								48485 Neuenkirchen
 								</p>
-								<aA lternativ am Offlumer See /48485 Neuenkirchen oder siehe unter "Neuigkeiten" a>
+								Alternativ am Offlumer See /48485 Neuenkirchen oder siehe unter "Neuigkeiten" 
 								</p>
-								<a Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.de finden. a>
-								<a oder  weitere Informationen und Terminabsprachen kannst Du auch im Smart-Forum.de finden.
+								Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.de finden.
+								oder weitere Terminabsprachen kannst Du auch im Smart-Forum.de finden.
 								Dort gehst Du einfach auf SMARTies Regional und wählst dann unseren Forumsbeitrag
-								Smarties im westlichen Münsterland "....oder klicke einfach auf: a>
-								<a http://www.smart-forum.de a>
+								Smarties im westlichen Münsterland "....oder klicke einfach auf: 
+								http://www.smart-forum.de 
 								.</p>
 							</section>
 
@@ -122,77 +122,77 @@
 
 <p>
 <p>2019-05-11<p>
-<a 10 Jahre Münsterland-Smarties
+10 Jahre Münsterland-Smarties
 
 <p>
 <p>2016-08-26/27<p>
-<a Die MLS fahren zu den Smart-Times nach Hamburg. a>
-<a na dann wollen wir mal sehen, wie viele Münsterland-Smarties es nach Hamburg zu den Smart-Times schaffen, ein paar Zimmer sind schon reserviert und auch die letzten Reparaturen werden noch gemacht. Dann kann es für die Einen schon am Donnerstag und für die Anderen am Freitag auf die Reise nach Hamburg gehen. 
-   So, für alle die noch mitkommen möchten, wir haben einen kleinen "Fahrplan" für Freitag 26.08.2016 gemacht: a>
-<a Treffpunk 09:00 Uhr - A30 - Abfahrt Rheine-Nord an der Tankstelle Krimpove/Burger King (Daimlerstraße 2, 48432 Rheine). a>
-<a Treffpunkt 09:30 Uhr - A1 - Abfahrt Osnabrück Hafen an der Shell-Tankstelle;(Professor-Porsche-Straße 1, 49076 Osnabrück) a>
-<a Feedback: a>
-<a Ein tolles, sonniges ... besser gesagt heißes Wochenende ich zu Ende und wir haben eine tolle Smart Time gehabt ... hier ein paar Eindrücke von den MLS in Hamburg. a>
+ <br>Die MLS fahren zu den Smart-Times nach Hamburg. <br>
+ na dann wollen wir mal sehen, wie viele Münsterland-Smarties es nach Hamburg zu den Smart-Times schaffen, ein paar Zimmer sind schon reserviert und auch die letzten Reparaturen werden noch gemacht. Dann kann es für die Einen schon am Donnerstag und für die Anderen am Freitag auf die Reise nach Hamburg gehen. 
+ So, für alle die noch mitkommen möchten, wir haben einen kleinen "Fahrplan" für Freitag 26.08.2016 gemacht: 
+ Treffpunk 09:00 Uhr - A30 - Abfahrt Rheine-Nord an der Tankstelle Krimpove/Burger King (Daimlerstraße 2, 48432 Rheine). 
+ Treffpunkt 09:30 Uhr - A1 - Abfahrt Osnabrück Hafen an der Shell-Tankstelle;(Professor-Porsche-Straße 1, 49076 Osnabrück) 
+ Feedback: a>
+ Ein tolles, sonniges ... besser gesagt heißes Wochenende ich zu Ende und wir haben eine tolle Smart Time gehabt ... hier ein paar Eindrücke von den MLS in Hamburg.
 
 <p>
 <p>2015-06-27<p> 
-<a smart shine Vol. 1 powered by smart-rheinland in Köln. a> 
-<a Wir waren zwar nur mit 4 Smarties in Köln, es war aber dennoch ein schöner Tag, hier mal ein paar Eindrücke. a>
+<br>smart shine Vol. 1 powered by smart-rheinland in Köln. <br>
+ Wir waren zwar nur mit 4 Smarties in Köln, es war aber dennoch ein schöner Tag, hier mal ein paar Eindrücke.
 
 <p>
 <p>2015-04-18<p>
-<p>Proud to be Smart in Hamm<p>
-<a Da haben wir es doch glatt mit 13 Münsterland-Smarties zum Proud to be Smart Event nach Hamm geschafft. Es war ein schöner Tag mit tollem Wetter und netten Gesprächen. a> 
-<a Vielen Dank an die Organisatoren, wir sehen uns bestimmt beim nächsten Mal wieder. a>
+<br>Proud to be Smart in Hamm<br>
+ Da haben wir es doch glatt mit 13 Münsterland-Smarties zum Proud to be Smart Event nach Hamm geschafft. Es war ein schöner Tag mit tollem Wetter und netten Gesprächen.  
+ Vielen Dank an die Organisatoren, wir sehen uns bestimmt beim nächsten Mal wieder. 
 
 <p>
 <p>2014-05-10<p> 
-<a Sammeltuning und Angrillen bei RS-Parts in Witten a> 
-<a Mit ein paar Münsterland-Smarties haben wir uns auf den Weg nach Witten zu RS-Parts gemacht und uns das Sammeltuning incl. Angrillen für einen guten Zweck mal anzusehen. a> 
-<a Dabei kam dann ein Smartie mit Chiptuning dabei raus und 2 Smarties mit der Pedalbox von DTE. Ein paar Eindrücke: a>
+ Sammeltuning und Angrillen bei RS-Parts in Witten  
+ Mit ein paar Münsterland-Smarties haben wir uns auf den Weg nach Witten zu RS-Parts gemacht und uns das Sammeltuning incl. Angrillen für einen guten Zweck mal anzusehen. 
+ Dabei kam dann ein Smartie mit Chiptuning dabei raus und 2 Smarties mit der Pedalbox von DTE. Ein paar Eindrücke: 
 
 <p>
 <p>2014-04-18<p> 
 <p>Die MLS machen CarFreitag<p>
-<a Erstens kommt es anders ... und zweitens als man denkt. So ergab es sich, das wir uns doch noch ganz spontan zum CarFreitag getroffen haben. 
-Es wurde etwas geschraubt, gefachsimpelt und es gab ein paar kleine Überraschungen, wie den Smart ED der mir netterweise von der Firma Beresa in Osnabück überlassen wurden. Hier ein paar Eindrücke: a>
+ Erstens kommt es anders ... und zweitens als man denkt. So ergab es sich, das wir uns doch noch ganz spontan zum CarFreitag getroffen haben. 
+Es wurde etwas geschraubt, gefachsimpelt und es gab ein paar kleine Überraschungen, wie den Smart ED der mir netterweise von der Firma Beresa in Osnabück überlassen wurden. Hier ein paar Eindrücke: 
 
 <p>
 <p>2013-09-29<p> 
 <p>Proud to be smart - Smart-Center Hamm <p>
-<a Die ersten Planungen für eine gemeinsam Ausfahrt zum Smart-Center Hamm sind gestartet. Das "Proud to be smart\" Meeting am 29.09.2013 ... mal sehen wie viele Smarties wir dort. a> 
-<a So, hier eine kleine Auswahl an Fotos vom Proud to be Smart Event in Hamm. War wieder mal ein schönes Treffen und das Wetter hat netterweise auch super mitgespielt. a>
+ Die ersten Planungen für eine gemeinsam Ausfahrt zum Smart-Center Hamm sind gestartet. Das "Proud to be smart\" Meeting am 29.09.2013 ... mal sehen wie viele Smarties wir dort.  
+ So, hier eine kleine Auswahl an Fotos vom Proud to be Smart Event in Hamm. War wieder mal ein schönes Treffen und das Wetter hat netterweise auch super mitgespielt. 
 
 <p>
 <p>2013-09-15<p> 
 <p>Das MLS T-Shirt<p>
-<a Ganz kurzentschlossen habe ich mal ein MLS T-Shit bestellt und rucki zucki war es auch schon bei mir zu Hause. Knapp 10 Euro incl. Versand. Wo und Wie findet Ihr auch im Forum ...\ a> 
-<a Nachdem ich den Bannergenerator nicht mehr wiederfinden konnte, habe ich versucht das alte Logo so gut wie es ging nachzubilden ... damit man auch mal Aufkleber oder größere Sachen bedrucken lassen könnte. a>
+ Ganz kurzentschlossen habe ich mal ein MLS T-Shit bestellt und rucki zucki war es auch schon bei mir zu Hause. Knapp 10 Euro incl. Versand. Wo und Wie findet Ihr auch im Forum ...\ 
+ Nachdem ich den Bannergenerator nicht mehr wiederfinden konnte, habe ich versucht das alte Logo so gut wie es ging nachzubilden ... damit man auch mal Aufkleber oder größere Sachen bedrucken lassen könnte. 
 
 <p>
 <p>2013-08-24<p>
-<a Man glaubt es kaum, aber auf den SmartTimes 2013 wurden wir persönlich begrüßt. a>
+ Man glaubt es kaum, aber auf den SmartTimes 2013 wurden wir persönlich begrüßt. 
 
 <p>
 <p>2013-06-08<p> 
-<a Smart Sound bei Dirk a>
+ Smart Sound bei Dirk 
 
 <p>
 <p>2012-11-03<p>
 <p>MLS Schraubersonntag<p> 
-<a Wir haben uns am 03.11.2012 in Legden in einer Selbsthilfewerkstatt getroffen um gemeinsam ein paar Reparaturen und Einbauten (Auspufftausch, Inspektion, LED Tagfahrlicht Einbau, Bremsen) an unseren Smarts vorzunehmen. Hier ein kleiner Eindruck: a>
+ Wir haben uns am 03.11.2012 in Legden in einer Selbsthilfewerkstatt getroffen um gemeinsam ein paar Reparaturen und Einbauten (Auspufftausch, Inspektion, LED Tagfahrlicht Einbau, Bremsen) an unseren Smarts vorzunehmen. Hier ein kleiner Eindruck: 
 
 <p>
 <p>2012-09-16<p>
 <p>MLS Septembertreffen mit Teuto Ausfahrt<p>
-<a Am 16.09.2012 haben wir uns zum Septembertreffen auf die Reise gemacht. Eine kleine Ausfahrt in den Teuto, über den Malepartus und eine Bifurkation in Melle zu Gandalf nach GM Hütte, wo der Grill schon auf uns gewartet hat. a>
-<a Wieder Mal ein schöner Tag. a>
+ Am 16.09.2012 haben wir uns zum Septembertreffen auf die Reise gemacht. Eine kleine Ausfahrt in den Teuto, über den Malepartus und eine Bifurkation in Melle zu Gandalf nach GM Hütte, wo der Grill schon auf uns gewartet hat. 
+ Wieder Mal ein schöner Tag. 
 
 
 <p>2012-07-01 <p>
 <p>MLS Grillen bei Dirk<p>
-<a Der 01.07.2012 war ebenfalls ein sonniger Ausflugs Tags mit den MLS, wir wurden netterweise beim Dirk in Heiden zum Grillen eingeladen. a>
-<a Ein schöner Tag. a>
+ Der 01.07.2012 war ebenfalls ein sonniger Ausflugs Tags mit den MLS, wir wurden netterweise beim Dirk in Heiden zum Grillen eingeladen. 
+ Ein schöner Tag. 
 </p>
 								</section>
 
