--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <p>
 <p>2016-08-26/27<p>
- <br>Die MLS fahren zu den Smart-Times nach Hamburg. <br>
+ <>Die MLS fahren zu den Smart-Times nach Hamburg. <>
  na dann wollen wir mal sehen, wie viele Münsterland-Smarties es nach Hamburg zu den Smart-Times schaffen, ein paar Zimmer sind schon reserviert und auch die letzten Reparaturen werden noch gemacht. Dann kann es für die Einen schon am Donnerstag und für die Anderen am Freitag auf die Reise nach Hamburg gehen. 
  So, für alle die noch mitkommen möchten, wir haben einen kleinen "Fahrplan" für Freitag 26.08.2016 gemacht: 
  Treffpunk 09:00 Uhr - A30 - Abfahrt Rheine-Nord an der Tankstelle Krimpove/Burger King (Daimlerstraße 2, 48432 Rheine). 
