--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <p>
 <p>2016-08-26/27<p>
- <>Die MLS fahren zu den Smart-Times nach Hamburg. <>
+ Die MLS fahren zu den Smart-Times nach Hamburg. 
  na dann wollen wir mal sehen, wie viele Münsterland-Smarties es nach Hamburg zu den Smart-Times schaffen, ein paar Zimmer sind schon reserviert und auch die letzten Reparaturen werden noch gemacht. Dann kann es für die Einen schon am Donnerstag und für die Anderen am Freitag auf die Reise nach Hamburg gehen. 
  So, für alle die noch mitkommen möchten, wir haben einen kleinen "Fahrplan" für Freitag 26.08.2016 gemacht: 
  Treffpunk 09:00 Uhr - A30 - Abfahrt Rheine-Nord an der Tankstelle Krimpove/Burger King (Daimlerstraße 2, 48432 Rheine). 
@@ -136,36 +136,36 @@
 
 <p>
 <p>2015-06-27<p> 
-<br>smart shine Vol. 1 powered by smart-rheinland in Köln. <br>
+ smart shine Vol. 1 powered by smart-rheinland in Köln.
  Wir waren zwar nur mit 4 Smarties in Köln, es war aber dennoch ein schöner Tag, hier mal ein paar Eindrücke.
 
 <p>
 <p>2015-04-18<p>
-<br>Proud to be Smart in Hamm<br>
+ Proud to be Smart in Hamm
  Da haben wir es doch glatt mit 13 Münsterland-Smarties zum Proud to be Smart Event nach Hamm geschafft. Es war ein schöner Tag mit tollem Wetter und netten Gesprächen.  
  Vielen Dank an die Organisatoren, wir sehen uns bestimmt beim nächsten Mal wieder. 
 
 <p>
 <p>2014-05-10<p> 
- Sammeltuning und Angrillen bei RS-Parts in Witten  
+ Sammeltuning und Angrillen bei RS-Parts in Witten   
  Mit ein paar Münsterland-Smarties haben wir uns auf den Weg nach Witten zu RS-Parts gemacht und uns das Sammeltuning incl. Angrillen für einen guten Zweck mal anzusehen. 
  Dabei kam dann ein Smartie mit Chiptuning dabei raus und 2 Smarties mit der Pedalbox von DTE. Ein paar Eindrücke: 
 
 <p>
 <p>2014-04-18<p> 
-<p>Die MLS machen CarFreitag<p>
+ Die MLS machen CarFreitag 
  Erstens kommt es anders ... und zweitens als man denkt. So ergab es sich, das wir uns doch noch ganz spontan zum CarFreitag getroffen haben. 
-Es wurde etwas geschraubt, gefachsimpelt und es gab ein paar kleine Überraschungen, wie den Smart ED der mir netterweise von der Firma Beresa in Osnabück überlassen wurden. Hier ein paar Eindrücke: 
+ Es wurde etwas geschraubt, gefachsimpelt und es gab ein paar kleine Überraschungen, wie den Smart ED der mir netterweise von der Firma Beresa in Osnabück überlassen wurden. Hier ein paar Eindrücke: 
 
 <p>
 <p>2013-09-29<p> 
-<p>Proud to be smart - Smart-Center Hamm <p>
+ Proud to be smart - Smart-Center Hamm 
  Die ersten Planungen für eine gemeinsam Ausfahrt zum Smart-Center Hamm sind gestartet. Das "Proud to be smart\" Meeting am 29.09.2013 ... mal sehen wie viele Smarties wir dort.  
  So, hier eine kleine Auswahl an Fotos vom Proud to be Smart Event in Hamm. War wieder mal ein schönes Treffen und das Wetter hat netterweise auch super mitgespielt. 
 
 <p>
 <p>2013-09-15<p> 
-<p>Das MLS T-Shirt<p>
+ Das MLS T-Shirt 
  Ganz kurzentschlossen habe ich mal ein MLS T-Shit bestellt und rucki zucki war es auch schon bei mir zu Hause. Knapp 10 Euro incl. Versand. Wo und Wie findet Ihr auch im Forum ...\ 
  Nachdem ich den Bannergenerator nicht mehr wiederfinden konnte, habe ich versucht das alte Logo so gut wie es ging nachzubilden ... damit man auch mal Aufkleber oder größere Sachen bedrucken lassen könnte. 
 
@@ -179,18 +179,18 @@ Es wurde etwas geschraubt, gefachsimpelt und es gab ein paar kleine Überraschun
 
 <p>
 <p>2012-11-03<p>
-<p>MLS Schraubersonntag<p> 
+ MLS Schraubersonntag 
  Wir haben uns am 03.11.2012 in Legden in einer Selbsthilfewerkstatt getroffen um gemeinsam ein paar Reparaturen und Einbauten (Auspufftausch, Inspektion, LED Tagfahrlicht Einbau, Bremsen) an unseren Smarts vorzunehmen. Hier ein kleiner Eindruck: 
 
 <p>
 <p>2012-09-16<p>
-<p>MLS Septembertreffen mit Teuto Ausfahrt<p>
+ MLS Septembertreffen mit Teuto Ausfahrt 
  Am 16.09.2012 haben wir uns zum Septembertreffen auf die Reise gemacht. Eine kleine Ausfahrt in den Teuto, über den Malepartus und eine Bifurkation in Melle zu Gandalf nach GM Hütte, wo der Grill schon auf uns gewartet hat. 
  Wieder Mal ein schöner Tag. 
 
 
 <p>2012-07-01 <p>
-<p>MLS Grillen bei Dirk<p>
+ MLS Grillen bei Dirk 
  Der 01.07.2012 war ebenfalls ein sonniger Ausflugs Tags mit den MLS, wir wurden netterweise beim Dirk in Heiden zum Grillen eingeladen. 
  Ein schöner Tag. 
 </p>
