--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 							</header>
 							<p>die sich der "kleinen Marke" verschrieben haben und Erfahrungen rund um den Betrieb, 
 							   die Pflege und die Reparatur ihrer Fahrzeuge austauschen möchten.
-                                                           Die Stammtisch-Besucher besitzen verschiedene Smart Modelle. 
-						           Dies ist kein Hindernis, 
+                                                           Die Stammtisch-Besucher besitzen verschiedene Smart Modelle. </p>
+						        <p>Dies ist kein Hindernis, 
 							   denn uns vereint das gemeinsame Interesse an unserem schönen Hobby. 
 							   Gegenseitige Hilfe wird bei uns groß geschrieben und frohe Geselligkeit auch.</p>
                                                            Gäste mit Interesse an der Sache sind bei uns selbstverständlich jederzeit gern gesehen, 
-							   können nähere Informationen über unsere Veranstaltungen erhalten und uns auch ganz unverbindlich an einem der Stammtischtermine besuchen kommen.
+							   können nähere Informationen über unsere Veranstaltungen erhalten und uns auch ganz unverbindlich an einem der Stammtischtermine besuchen kommen.</p>
 								</h3>
 							
 								</p>
@@ -74,7 +74,7 @@
 							<header>
 								<h3>Unser Stammtisch</h3>
 							</header>
-							<p><a </a>  Wann und wo treffen wir uns?
+							<p><a </a>  Wann und wo treffen wir uns? </p>
 								Der Stammtisch Münsterland trifft sich jeden 3. Sonntag im Monat um 15.00 Uhr am,
 								http://www.cafe-jedermann.de
 								Wettringer Str. 60
@@ -99,7 +99,7 @@
 							<header>
 								<h3>Neuigkeiten</h3>
 							</header>
-							<p>Herzlich Willkommen bei den Münsterland-Smarties – Neuigkeiten
+							<p>Herzlich Willkommen bei den Münsterland-Smarties – Neuigkeiten</p>
 							   Auf diesem Teil der Homepage möchten wir Euch einen kleinen Einblick in unsere Aktivitäten gewähren. 
 							   Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch dann mal auf einem Stammtisch begrüßen.
 </p>
@@ -117,8 +117,8 @@
 	<header>
 								<h3>Foto Galerie</h3>
 							</header>
-<p>2019-12-01<p>
-<p>Weihnachtstreff mit allen Freunden der Münsterland-Smarties<p>
+<p>2019-12-01 </p>
+Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 
 <p>
 <p>2019-05-11<p>
