--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
 								<h3>Unser Stammtisch</h3>
 							</header>
 							<p>     Wann und wo treffen wir uns? </p>
-								Der Stammtisch Münsterland trifft sich jeden 3. Sonntag im Monat um 15.00 Uhr am,
-								http://www.cafe-jedermann.de
-								Wettringer Str. 60
-								48485 Neuenkirchen
+								Der Stammtisch Münsterland trifft sich jeden 3. Sonntag im Monat um 15.00 Uhr am, <br>
+								http://www.cafe-jedermann.de <br>
+								Wettringer Str. 60 <br>
+								48485 Neuenkirchen <br>
 								</p>
 								Alternativ am Offlumer See /48485 Neuenkirchen oder siehe unter "Neuigkeiten" 
 								</p>
-								Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.de finden.
-								oder weitere Terminabsprachen kannst Du auch im Smart-Forum.de finden.
+								Für weitere Informationen und Terminabsprachen kannst Du uns auch in Facebook.de finden. <br>
+								oder weitere Terminabsprachen kannst Du auch im Smart-Forum.de finden. <br>
 								Dort gehst Du einfach auf SMARTies Regional und wählst dann unseren Forumsbeitrag
-								Smarties im westlichen Münsterland "....oder klicke einfach auf: 
+								Smarties im westlichen Münsterland "....oder klicke einfach auf: <br>
 								http://www.smart-forum.de 
 								.</p>
 							</section>
