--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 							<p>die sich der "kleinen Marke" verschrieben haben und Erfahrungen rund um den Betrieb, 
 							   die Pflege und die Reparatur ihrer Fahrzeuge austauschen möchten.
                                                            Die Stammtisch-Besucher besitzen verschiedene Smart Modelle. </p>
-						        <p>Dies ist kein Hindernis, 
-							   denn uns vereint das gemeinsame Interesse an unserem schönen Hobby. 
+						        <p>Dies ist kein Hindernis, <br>
+							   denn uns vereint das gemeinsame Interesse an unserem schönen Hobby. <br>
 							   Gegenseitige Hilfe wird bei uns groß geschrieben und frohe Geselligkeit auch.</p>
-                                                           Gäste mit Interesse an der Sache sind bei uns selbstverständlich jederzeit gern gesehen, 
-							   können nähere Informationen über unsere Veranstaltungen erhalten und uns auch ganz unverbindlich an einem der Stammtischtermine besuchen kommen.</p>
+                                                           Gäste mit Interesse an der Sache sind bei uns selbstverständlich jederzeit gern gesehen 
+							   und können nähere Informationen über unsere Veranstaltungen erhalten oder uns auch ganz unverbindlich an einem der Stammtischtermine besuchen kommen.</p>
 								</h3>
 							
 								</p>
@@ -100,7 +100,7 @@
 								<h3>Neuigkeiten</h3>
 							</header>
 							<p>Herzlich Willkommen bei den Münsterland-Smarties – Neuigkeiten</p>
-							   Auf diesem Teil der Homepage möchten wir Euch einen kleinen Einblick in unsere Aktivitäten gewähren. 
+							   Auf diesem Teil der Homepage möchten wir Euch einen kleinen Einblick in unsere Aktivitäten gewähren. <br> 
 							   Vielleicht weckt das ja das Interesse bei dem Einen oder Anderen und vielleicht dürfen wir Dich/Euch dann mal auf einem Stammtisch begrüßen.
 </p>
 								</section>
@@ -117,68 +117,68 @@
 	<header>
 								<h3>Foto Galerie</h3>
 							</header>
-<p> 2019-12-01 </p>
+<p> 2019-12-01  <br>
 Weihnachtstreff mit allen Freunden der Münsterland-Smarties
-
-<p> 2019-05-11 </p>
+</p>
+<p> 2019-05-11  <br>
 10 Jahre Münsterland-Smarties
-
-<p> 2016-08-26/27 </p>
- Die MLS fahren zu den Smart-Times nach Hamburg. 
+</p>
+<p> 2016-08-26/27 <br>
+ Die MLS fahren zu den Smart-Times nach Hamburg. <br>
  na dann wollen wir mal sehen, wie viele Münsterland-Smarties es nach Hamburg zu den Smart-Times schaffen, ein paar Zimmer sind schon reserviert und auch die letzten Reparaturen werden noch gemacht. Dann kann es für die Einen schon am Donnerstag und für die Anderen am Freitag auf die Reise nach Hamburg gehen. 
- So, für alle die noch mitkommen möchten, wir haben einen kleinen "Fahrplan" für Freitag 26.08.2016 gemacht: 
- Treffpunk 09:00 Uhr - A30 - Abfahrt Rheine-Nord an der Tankstelle Krimpove/Burger King (Daimlerstraße 2, 48432 Rheine). 
- Treffpunkt 09:30 Uhr - A1 - Abfahrt Osnabrück Hafen an der Shell-Tankstelle;(Professor-Porsche-Straße 1, 49076 Osnabrück) 
- Feedback: 
+ So, für alle die noch mitkommen möchten, wir haben einen kleinen "Fahrplan" für Freitag 26.08.2016 gemacht: <br>
+ Treffpunk 09:00 Uhr - A30 - Abfahrt Rheine-Nord an der Tankstelle Krimpove/Burger King (Daimlerstraße 2, 48432 Rheine). <br>
+ Treffpunkt 09:30 Uhr - A1 - Abfahrt Osnabrück Hafen an der Shell-Tankstelle;(Professor-Porsche-Straße 1, 49076 Osnabrück) <br>
+ Feedback: <br>
  Ein tolles, sonniges ... besser gesagt heißes Wochenende ich zu Ende und wir haben eine tolle Smart Time gehabt ... hier ein paar Eindrücke von den MLS in Hamburg.
-
-<p> 2015-06-27 </p> 
- smart shine Vol. 1 powered by smart-rheinland in Köln.
+</p>
+<p> 2015-06-27 <br> 
+ smart shine Vol. 1 powered by smart-rheinland in Köln. <br>
  Wir waren zwar nur mit 4 Smarties in Köln, es war aber dennoch ein schöner Tag, hier mal ein paar Eindrücke.
-
-<p> 2015-04-18 </p>
- Proud to be Smart in Hamm
+</p>
+<p> 2015-04-18 <br>
+ Proud to be Smart in Hamm <br>
  Da haben wir es doch glatt mit 13 Münsterland-Smarties zum Proud to be Smart Event nach Hamm geschafft. Es war ein schöner Tag mit tollem Wetter und netten Gesprächen.  
  Vielen Dank an die Organisatoren, wir sehen uns bestimmt beim nächsten Mal wieder. 
-
-<p> 2014-05-10 </p> 
- Sammeltuning und Angrillen bei RS-Parts in Witten   
+</p>
+<p> 2014-05-10 <br> 
+ Sammeltuning und Angrillen bei RS-Parts in Witten  <br>
  Mit ein paar Münsterland-Smarties haben wir uns auf den Weg nach Witten zu RS-Parts gemacht und uns das Sammeltuning incl. Angrillen für einen guten Zweck mal anzusehen. 
  Dabei kam dann ein Smartie mit Chiptuning dabei raus und 2 Smarties mit der Pedalbox von DTE. Ein paar Eindrücke: 
-
-<p> 2014-04-18 </p> 
- Die MLS machen CarFreitag 
+</p>
+<p> 2014-04-18 <br> 
+ Die MLS machen CarFreitag <br>
  Erstens kommt es anders ... und zweitens als man denkt. So ergab es sich, das wir uns doch noch ganz spontan zum CarFreitag getroffen haben. 
  Es wurde etwas geschraubt, gefachsimpelt und es gab ein paar kleine Überraschungen, wie den Smart ED der mir netterweise von der Firma Beresa in Osnabück überlassen wurden. Hier ein paar Eindrücke: 
-
-<p> 2013-09-29 </p> 
- Proud to be smart - Smart-Center Hamm 
+</p>
+<p> 2013-09-29 <br> 
+ Proud to be smart - Smart-Center Hamm <br>
  Die ersten Planungen für eine gemeinsam Ausfahrt zum Smart-Center Hamm sind gestartet. Das "Proud to be smart\" Meeting am 29.09.2013 ... mal sehen wie viele Smarties wir dort.  
  So, hier eine kleine Auswahl an Fotos vom Proud to be Smart Event in Hamm. War wieder mal ein schönes Treffen und das Wetter hat netterweise auch super mitgespielt. 
-
-<p> 2013-09-15 </p> 
- Das MLS T-Shirt 
+</p>
+<p> 2013-09-15 <br> 
+ Das MLS T-Shirt <br>
  Ganz kurzentschlossen habe ich mal ein MLS T-Shit bestellt und rucki zucki war es auch schon bei mir zu Hause. Knapp 10 Euro incl. Versand. Wo und Wie findet Ihr auch im Forum ...\ 
  Nachdem ich den Bannergenerator nicht mehr wiederfinden konnte, habe ich versucht das alte Logo so gut wie es ging nachzubilden ... damit man auch mal Aufkleber oder größere Sachen bedrucken lassen könnte. 
-
-<p> 2013-08-24 </p>
+</p>
+<p> 2013-08-24 <br>
  Man glaubt es kaum, aber auf den SmartTimes 2013 wurden wir persönlich begrüßt. 
-
-<p> 2013-06-08 </p> 
+</p>
+<p> 2013-06-08 <br> 
  Smart Sound bei Dirk 
-
-<p> 2012-11-03 </p>
- MLS Schraubersonntag 
+</p>
+<p> 2012-11-03 <br>
+ MLS Schraubersonntag <br>
  Wir haben uns am 03.11.2012 in Legden in einer Selbsthilfewerkstatt getroffen um gemeinsam ein paar Reparaturen und Einbauten (Auspufftausch, Inspektion, LED Tagfahrlicht Einbau, Bremsen) an unseren Smarts vorzunehmen. Hier ein kleiner Eindruck: 
-
-<p> 2012-09-16 </p>
- MLS Septembertreffen mit Teuto Ausfahrt 
+</p>
+<p> 2012-09-16 <br>
+ MLS Septembertreffen mit Teuto Ausfahrt <br>
  Am 16.09.2012 haben wir uns zum Septembertreffen auf die Reise gemacht. Eine kleine Ausfahrt in den Teuto, über den Malepartus und eine Bifurkation in Melle zu Gandalf nach GM Hütte, wo der Grill schon auf uns gewartet hat. 
  Wieder Mal ein schöner Tag. 
+</p>
 
-
-<p> 2012-07-01 </p>
- MLS Grillen bei Dirk 
+<p> 2012-07-01 <br>
+ MLS Grillen bei Dirk <br>
  Der 01.07.2012 war ebenfalls ein sonniger Ausflugs Tags mit den MLS, wir wurden netterweise beim Dirk in Heiden zum Grillen eingeladen. 
  Ein schöner Tag. 
 </p>
