--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 							</header>
 							<p>die sich der "kleinen Marke" verschrieben haben und Erfahrungen rund um den Betrieb, 
 							   die Pflege und die Reparatur ihrer Fahrzeuge austauschen möchten.
-                                                           Die Stammtisch-Besucher besitzen verschiedene Smart Modelle. </p>
-						        <p>Dies ist kein Hindernis, <br>
+                                                           Die Stammtisch-Besucher besitzen verschiedene Smart Modelle. <br>
+						           Dies ist kein Hindernis, <br>
 							   denn uns vereint das gemeinsame Interesse an unserem schönen Hobby. <br>
 							   Gegenseitige Hilfe wird bei uns groß geschrieben und frohe Geselligkeit auch.</p>
                                                            Gäste mit Interesse an der Sache sind bei uns selbstverständlich jederzeit gern gesehen 
