--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
 	<header>
 			<h3>Foto Galerie</h3>
 	</header>
+	</header>
 			<h1><a href="https://magentacloud.de/s/2x8Wt9TgTpYNzZM/authenticate/showShare.html">Fotos Münsterland-Smarties</a><h1>
 	</header>
-				
+<p></p>				
 <p> 2019-12-01  <br>
 Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 </p>
