--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
 			<h3>Foto Galerie</h3>
 	</header>
 	</header>
-			<h1><a href="https://magentacloud.de/s/2x8Wt9TgTpYNzZM/authenticate/showShare.html">Fotos Münsterland-Smarties</a></h1>
+			<h1><a href="https://magentacloud.de/s/2x8Wt9TgTpYNzZM/authenticate/showShare.html">"Fotos Münsterland-Smarties"</a></h1> <br>
+                            "!dieser Link führt dich zur MangentaCloud, zum Anschauen der Fotos benötigst du ein Passwort! <br> Sende mir eine PN um Zugang zu erhalten!"<br>
 	</header>
 <p></p>				
 <p> 2019-12-01  <br>
