--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	</header>
 	</header>
 			<h1><a href="https://magentacloud.de/s/2x8Wt9TgTpYNzZM/authenticate/showShare.html">"Fotos Münsterland-Smarties"</a></h1> <br>
-                            "!dieser Link führt dich zur MangentaCloud, zum Anschauen der Fotos benötigst du ein Passwort! <br> Sende mir eine PN um Zugang zu erhalten!"<br>
+                           <h1> >"!dieser Link führt dich zur MangentaCloud, zum Anschauen der Fotos benötigst du ein Passwort! <br> Sende mir eine PN um Zugang zu erhalten!"< </h1> <br>
 	</header>
 <p></p>				
 <p> 2019-12-01  <br>
