--- a/index.html
+++ b/index.html
@@ -293,26 +293,26 @@ Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 		</div>
 
 		
-						<!-- Post -->
-						<article class="box post">
-							<header>
-								<h2><a href="#">By the way, many thanks to <strong>regularjane</strong>
-										for these awesome demo photos</a></h2>
-							</header>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-							<h3>You should probably check out her work</h3>
-							<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-								ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-								sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-								in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-								consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-								in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-								magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-								consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-								justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-								mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-								Curabitur leo nibh, rutrum malesuada.</p>
-							<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat
+						*<!-- Post -->
+						*<article class="box post">
+							*<header>
+								*<h2><a href="#">By the way, many thanks to <strong>regularjane</strong>
+									*	for these awesome demo photos</a></h2>
+							*</header>
+							*<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+							*<h3>You should probably check out her work</h3>
+							*<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
+								*ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
+								*sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
+								*in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
+								*consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
+								*in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
+								*magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
+								*consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
+								*justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
+								*mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
+								*Curabitur leo nibh, rutrum malesuada.</p>
+							*<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat
 								Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit ligula
 								vel quam viverra sit amet mollis tortor congue. Sed quis mauris sit amet
 								magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada in,
