--- a/index.html
+++ b/index.html
@@ -291,10 +291,10 @@ Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 				</section>
 
 		</div>
-<!--
+
 		
 						<!-- Post -->
-						<article class="box post">
+						<!-- <article class="box post">
 							<header>
 								<h2><a href="#">By the way, many thanks to <strong>regularjane</strong>
 										for these awesome demo photos</a></h2>
@@ -325,18 +325,18 @@ Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 							</ul>
 						</article>
 
-					</div>
-
+					</div> 
+-->
 					<!-- Sidebar -->
-					<div id="sidebar" class="col-4 col-12-medium">
-
+<!--					<div id="sidebar" class="col-4 col-12-medium">
+-->
 						<!-- Excerpts -->
-						<section>
+<!--						<section>
 							<ul class="divided">
 								<li>
-
+-->
 									<!-- Excerpt -->
-									<article class="box excerpt">
+<!--									<article class="box excerpt">
 										<header>
 											<span class="date">July 30</span>
 											<h3><a href="#">Just another post</a></h3>
@@ -347,9 +347,9 @@ Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 
 								</li>
 								<li>
-
+-->
 									<!-- Excerpt -->
-									<article class="box excerpt">
+<!--									<article class="box excerpt">
 										<header>
 											<span class="date">July 28</span>
 											<h3><a href="#">And another post</a></h3>
@@ -361,8 +361,8 @@ Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 								</li>
 								<li>
 
-									<!-- Excerpt -->
-									<article class="box excerpt">
+-->									<!-- Excerpt -->
+<!--									<article class="box excerpt">
 										<header>
 											<span class="date">July 24</span>
 											<h3><a href="#">One more post</a></h3>
@@ -374,14 +374,14 @@ Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 								</li>
 								</ul>
 								</section>
-
+-->
 						<!-- Highlights -->
-						<section>
+<!--						<section>
 							<ul class="divided">
 								<li>
 
 									<!-- Highlight -->
-									<article class="box highlight">
+<!--									<article class="box highlight">
 										<header>
 											<h3><a href="#">Something of note</a></h3>
 										</header>
@@ -399,7 +399,7 @@ Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 								<li>
 
 									<!-- Highlight -->
-									<article class="box highlight">
+<!--									<article class="box highlight">
 										<header>
 											<h3><a href="#">Something of less note</a></h3>
 										</header>
