--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					</div>
 					<div class="col-12">
 						<ul class="actions">
-							<li><a href="#" class="button icon solid fa-file">Schreib uns deine Neuigkeiten</a></li>
+							<li><a href="#225" class="button icon solid fa-file">Schreib uns deine Neuigkeiten</a></li>
 						</ul>
 					</div>
 					</div>
