--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a class="icon solid fa-home" href="index.html"><span>MLS-start</span></a></li
-						<li><a class="icon solid fa-sitemap" href="no-sidebar.html"><span>Neuigkeiten</span></a></li>
-						<li><a class="icon solid fa-sitemap" href="no-sidebar.html"><span>Unser Stammtisch</span></a></li>
-						<li><a class="icon solid fa-sitemap" href="no-sidebar.html"><span>Foto-Galerie</span></a></li>
-						<li><a class="icon solid fa-sitemap" href="no-sidebar.html"><span>Die Smarties</span></a></li>
+						<li><a class="icon solid fa-home" href="#newes"><span>Neuigkeiten</span></a></li
+						<li><a class="icon solid fa-home" href="#picture"><span>Foto-Galerie</span></a></li>
 						</ul>
 						</nav>
 
@@ -94,6 +92,7 @@
 					<div class="col-4 col-6-medium col-12-small">
 
 						<!-- Feature -->
+						<section id="news">
 						<section>
 							<a href="#" class="image featured"><img src="images/BBlinks.jpg" alt="" /></a>
 							<header>
@@ -113,6 +112,7 @@
 					</div>
 					</div>
 					</div>
+					<section id="picture">
 					</section>
 	<header>
 			<h3>Foto Galerie</h3>
