--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 						<li><a class="icon solid fa-home" href="index.html"><span>MLS-start</span></a></li
 						<li><a class="icon solid fa-home" href="#newes"><span>Neuigkeiten</span></a></li
 						<li><a class="icon solid fa-home" href="#picture"><span>Foto-Galerie</span></a></li>
+						<li><a class="icon solid fa-home" href="#footer"><span>eMail an uns</span></a></li>
 						</ul>
 						</nav>
 
