--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	</header>
 	</header>
 			<h1><a href="https://magentacloud.de/s/2x8Wt9TgTpYNzZM/authenticate/showShare.html"style="color:#ff00ff">"Link: Fotos Münsterland-Smarties"</a></h1> <br>
-                           <h1> >"!! Dieser Link führt dich zur MangentaCloud, <br> zum Anschauen der Fotos benötigst du ein Passwort! <br> Sende mir eine Message um Zugang zu erhalten !!"< </h1> <br>
+                           <h1> >"!! Dieser Link führt dich zur MangentaCloud, <br> zum Anschauen der Fotos benötigst du ein Passwort! <br> Sende mir eine Message um Zugang zu erhalten !!"style="color:#ff00ff"< </h1> <br>
 	</header>
 <p></p>				
 <p> 2019-12-01  <br>
