--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@
 	</header>
 	</header>
 			<h1><a href="https://magentacloud.de/s/2x8Wt9TgTpYNzZM/authenticate/showShare.html"style="color:#ff00ff">"Link: Fotos Münsterland-Smarties"</a></h1> <br>
-                           <h1> # Dieser Link führt dich zur MangentaCloud, <br> zum Anschauen der Fotos benötigst du ein Passwort! <br> Sende mir eine Message um Zugang zu erhalten #< </h1> <br>
+                           <h1> # Dieser Link führt dich zur MangentaCloud, <br> zum Anschauen der Fotos benötigst du ein Passwort! <br> Sende mir eine Message um Zugang zu erhalten # </h1> <br>
 	</header>
 <p></p>				
-<p> 2019-12-01  <br>
+<p> <h1>2019-12-01</h1> <br>
 Weihnachtstreff mit allen Freunden der Münsterland-Smarties
 </p>
-<p> 2019-05-11  <br>
+<p> <h1>2019-05-11</h1> <br>
 10 Jahre Münsterland-Smarties
 </p>
-<p> 2016-08-26/27 <br>
+<p> <h1>2016-08-26/27</h1> <br>
  Die MLS fahren zu den Smart-Times nach Hamburg. <br>
  na dann wollen wir mal sehen, wie viele Münsterland-Smarties es nach Hamburg zu den Smart-Times schaffen, ein paar Zimmer sind schon reserviert und auch die letzten Reparaturen werden noch gemacht. Dann kann es für die Einen schon am Donnerstag und für die Anderen am Freitag auf die Reise nach Hamburg gehen. 
  So, für alle die noch mitkommen möchten, wir haben einen kleinen "Fahrplan" für Freitag 26.08.2016 gemacht: <br>
@@ -138,52 +138,52 @@ Weihnachtstreff mit allen Freunden der Münsterland-Smarties
  Feedback: <br>
  Ein tolles, sonniges ... besser gesagt heißes Wochenende ich zu Ende und wir haben eine tolle Smart Time gehabt ... hier ein paar Eindrücke von den MLS in Hamburg.
 </p>
-<p> 2015-06-27 <br> 
+<p> <h1>2015-06-27</h1> <br> 
  smart shine Vol. 1 powered by smart-rheinland in Köln. <br>
  Wir waren zwar nur mit 4 Smarties in Köln, es war aber dennoch ein schöner Tag, hier mal ein paar Eindrücke.
 </p>
-<p> 2015-04-18 <br>
+<p> <h1>2015-04-18</h1> <br>
  Proud to be Smart in Hamm <br>
  Da haben wir es doch glatt mit 13 Münsterland-Smarties zum Proud to be Smart Event nach Hamm geschafft. Es war ein schöner Tag mit tollem Wetter und netten Gesprächen.  
  Vielen Dank an die Organisatoren, wir sehen uns bestimmt beim nächsten Mal wieder. 
 </p>
-<p> 2014-05-10 <br> 
+<p> <h1>2014-05-10</h1> <br> 
  Sammeltuning und Angrillen bei RS-Parts in Witten  <br>
  Mit ein paar Münsterland-Smarties haben wir uns auf den Weg nach Witten zu RS-Parts gemacht und uns das Sammeltuning incl. Angrillen für einen guten Zweck mal anzusehen. 
  Dabei kam dann ein Smartie mit Chiptuning dabei raus und 2 Smarties mit der Pedalbox von DTE. Ein paar Eindrücke: 
 </p>
-<p> 2014-04-18 <br> 
+<p> <h1>2014-04-18</h1> <br> 
  Die MLS machen CarFreitag <br>
  Erstens kommt es anders ... und zweitens als man denkt. So ergab es sich, das wir uns doch noch ganz spontan zum CarFreitag getroffen haben. 
  Es wurde etwas geschraubt, gefachsimpelt und es gab ein paar kleine Überraschungen, wie den Smart ED der mir netterweise von der Firma Beresa in Osnabück überlassen wurden. Hier ein paar Eindrücke: 
 </p>
-<p> 2013-09-29 <br> 
+<p> <h1>2013-09-29</h1> <br> 
  Proud to be smart - Smart-Center Hamm <br>
  Die ersten Planungen für eine gemeinsam Ausfahrt zum Smart-Center Hamm sind gestartet. Das "Proud to be smart\" Meeting am 29.09.2013 ... mal sehen wie viele Smarties wir dort.  
  So, hier eine kleine Auswahl an Fotos vom Proud to be Smart Event in Hamm. War wieder mal ein schönes Treffen und das Wetter hat netterweise auch super mitgespielt. 
 </p>
-<p> 2013-09-15 <br> 
+<p> <h1>2013-09-15</h1> <br> 
  Das MLS T-Shirt <br>
  Ganz kurzentschlossen habe ich mal ein MLS T-Shit bestellt und rucki zucki war es auch schon bei mir zu Hause. Knapp 10 Euro incl. Versand. Wo und Wie findet Ihr auch im Forum ...\ 
  Nachdem ich den Bannergenerator nicht mehr wiederfinden konnte, habe ich versucht das alte Logo so gut wie es ging nachzubilden ... damit man auch mal Aufkleber oder größere Sachen bedrucken lassen könnte. 
 </p>
-<p> 2013-08-24 <br>
+<p> <h1>2013-08-24</h1> <br>
  Man glaubt es kaum, aber auf den SmartTimes 2013 wurden wir persönlich begrüßt. 
 </p>
-<p> 2013-06-08 <br> 
+<p> <h1>2013-06-08</h1> <br> 
  Smart Sound bei Dirk 
 </p>
-<p> 2012-11-03 <br>
+<p> <h1>2012-11-03</h1> <br>
  MLS Schraubersonntag <br>
  Wir haben uns am 03.11.2012 in Legden in einer Selbsthilfewerkstatt getroffen um gemeinsam ein paar Reparaturen und Einbauten (Auspufftausch, Inspektion, LED Tagfahrlicht Einbau, Bremsen) an unseren Smarts vorzunehmen. Hier ein kleiner Eindruck: 
 </p>
-<p> 2012-09-16 <br>
+<p> <h1>2012-09-16</h1> <br>
  MLS Septembertreffen mit Teuto Ausfahrt <br>
  Am 16.09.2012 haben wir uns zum Septembertreffen auf die Reise gemacht. Eine kleine Ausfahrt in den Teuto, über den Malepartus und eine Bifurkation in Melle zu Gandalf nach GM Hütte, wo der Grill schon auf uns gewartet hat. 
  Wieder Mal ein schöner Tag. 
 </p>
 
-<p> 2012-07-01 <br>
+<p> <h1>2012-07-01</h1> <br>
  MLS Grillen bei Dirk <br>
  Der 01.07.2012 war ebenfalls ein sonniger Ausflugs Tags mit den MLS, wir wurden netterweise beim Dirk in Heiden zum Grillen eingeladen. 
  Ein schöner Tag. 
